# nostd-practice

./: Cargo.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: check.yaml
src/: main.rs
