[package]
name = "nostd"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"
strip = "symbols"
lto = "fat"

[dependencies]
lazycsv = { version = "0.1.0", default-features = false }
no_std_io = { version = "0.6.0", features = ["nightly"] }
syscalls = { version = "0.6.18", default-features = false }
